--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	background: #1c2129;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h4 {
+	color: #bae1ff;
+	text-align: center;
 }
+
+header span {
+	text-align: center;
+	font-style: italic;
+	font-size: 20px;
+}
+
+.container {
+	display: flex;
+	justify-content: center;
+}
+
+.question {
+	border-bottom: solid 2px #baffc9;
+	color: #ffdfba;
+	width: 60%;
+	margin: 10px auto;
+	padding: 5px;
+}
+
+/* button {
+	background-color: #1c2129;
+	border: 2px solid #ffffba;
+	padding: 10px;
+	margin: 20px;
+	font-size: 18px;
+	color: #ffffba;
+	min-width: 50px;
+	height: 50px;
+} */
+
+/* button:hover {
+	background-color: #ffffba;
+	border: none;
+	color: #1c2129;
+} */
+
+.answer {
+	display: flex;
+	justify-content: center;
+}
+
+.wrong:hover {
+	background-color: #ffb3ba;
+	border: none;
+}
+
+.show-answer:hover {
+	background-color: #bae1ff;
+	border: none;
+}
+
+.correct:hover {
+	background-color: #baffc9;
+	border: none;
+}
+.result {
+	text-align: center;
+	color: #ffdfba;
+	font-size: 25px;
+}
+
+.result-buttons {
+	display: flex;
+	justify-content: center;
+}
+
+/* #ffb3ba
+#ffdfba
+#ffffba
+#baffc9
+#bae1ff */
