--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ header span {
 	font-size: 20px;
 }
 
-.container {
+.button-box {
 	display: flex;
 	justify-content: center;
 }
@@ -32,7 +32,7 @@ header span {
 	padding: 5px;
 }
 
-.answer {
+.answer-buttons {
 	display: flex;
 	justify-content: center;
 }
